Fix T43711: dual quaternion deform bug with shearing in deform matrix.

This also increases the tolerances in is_orthogonal / is_orthonormal functions,
which were much too low for practical purposes.