source/blender/blenlib/intern/math_matrix.c
@@ -1159,7 +1159,7 @@ bool is_orthogonal_m3(float m[3][3])
 
 	for (i = 0; i < 3; i++) {
 		for (j = 0; j < i; j++) {
-			if (fabsf(dot_v3v3(m[i], m[j])) > 1.5f * FLT_EPSILON)
+			if (fabsf(dot_v3v3(m[i], m[j])) > 1e-5f)
 				return false;
 		}
 	}
@@ -1173,7 +1173,7 @@ bool is_orthogonal_m4(float m[4][4])
 
 	for (i = 0; i < 4; i++) {
 		for (j = 0; j < i; j++) {
-			if (fabsf(dot_v4v4(m[i], m[j])) > 1.5f * FLT_EPSILON)
+			if (fabsf(dot_v4v4(m[i], m[j])) > 1e-5f)
 				return false;
 		}
 
@@ -1188,7 +1188,7 @@ bool is_orthonormal_m3(float m[3][3])
 		int i;
 
 		for (i = 0; i < 3; i++)
-			if (fabsf(dot_v3v3(m[i], m[i]) - 1) > 1.5f * FLT_EPSILON)
+			if (fabsf(dot_v3v3(m[i], m[i]) - 1) > 1e-5f)
 				return false;
 
 		return true;
@@ -1203,7 +1203,7 @@ bool is_orthonormal_m4(float m[4][4])
 		int i;
 
 		for (i = 0; i < 4; i++)
-			if (fabsf(dot_v4v4(m[i], m[i]) - 1) > 1.5f * FLT_EPSILON)
+			if (fabsf(dot_v4v4(m[i], m[i]) - 1) > 1e-5f)
 				return false;
 
 		return true;
